[gd_scene load_steps=9 format=3 uid="uid://nanf2cwywhgx"]

[ext_resource type="Texture2D" uid="uid://c7j1l5tdf087q" path="res://Tiny Swords (Free Pack)/Decorations/summer and spring items.png" id="1_fdk8n"]
[ext_resource type="Script" uid="uid://c6o03q3buolpc" path="res://warming/script/warming.gd" id="1_vetjd"]
[ext_resource type="PackedScene" uid="uid://5ypvcel7aw54" path="res://KeyboardLabel/Label_keyboard.tscn" id="3_niau1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_niau1"]
size = Vector2(6, 2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vetjd"]
texture = ExtResource("1_fdk8n")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
4:12/0 = 0
5:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
10:16/0 = 0
11:16/0 = 0

[sub_resource type="TileSet" id="TileSet_niau1"]
sources/0 = SubResource("TileSetAtlasSource_vetjd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61lah"]
size = Vector2(12, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vetjd"]
content_margin_left = 2.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.941165, 0.955695, 0.996583, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 3

[node name="Warming" type="Node2D" node_paths=PackedStringArray("painel", "title", "text")]
script = ExtResource("1_vetjd")
painel = NodePath("Area2D/CanvasLayer/Mural")
title = NodePath("Area2D/CanvasLayer/Mural/Title")
text = NodePath("Area2D/CanvasLayer/Mural/Text")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(125, 42)
shape = SubResource("RectangleShape2D_niau1")

[node name="Area2D" type="Area2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Area2D"]
position = Vector2(113, 28)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray(0, 0, 1, 0, 1, 0, 0, 0, 2, 0, 12, 0, 0, 0)
tile_set = SubResource("TileSet_niau1")

[node name="LabelKeyboard" parent="Area2D" instance=ExtResource("3_niau1")]
position = Vector2(109, 34)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(125, 39)
shape = SubResource("RectangleShape2D_61lah")

[node name="CanvasLayer" type="CanvasLayer" parent="Area2D"]

[node name="Mural" type="PanelContainer" parent="Area2D/CanvasLayer"]
visible = false
offset_right = 77.0
offset_bottom = 43.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vetjd")

[node name="Title" type="RichTextLabel" parent="Area2D/CanvasLayer/Mural"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 7

[node name="Text" type="RichTextLabel" parent="Area2D/CanvasLayer/Mural"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 5
text = "default"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="in_area"]
[connection signal="body_exited" from="Area2D" to="." method="out_area"]
